--- a/ufund-ui/src/app/admin/admin.component.html
+++ b/ufund-ui/src/app/admin/admin.component.html
@@ -1,1 +1,28 @@
-<p>admin works!</p>
+
+<h2>Cupboard</h2>
+<div class="needs">
+  <div *ngFor="let need of needs">
+    <button [class.selected]="need === selectedNeed" type="button" (click)="onSelect(need)">
+      <span class="name">{{need.name}}</span>
+    </button>
+  </div>
+</div>
+
+
+<div *ngIf="selectedNeed" [hidden]="hideDetails">
+  <h2>{{selectedNeed.name | uppercase}} </h2>
+  <div>Price: {{selectedNeed.price}}</div>
+  <div>Quantity: {{selectedNeed.quantity}}</div>
+  <div>Type: {{selectedNeed.type}}</div>
+  <div class="input-group">
+    <label for="need-name">Need name: </label> 
+    <input id="need-name" [(ngModel)]="selectedNeed.name" placeholder="Name">
+    <label for="need-cost">Price: </label>
+    <input id="need-cost" [(ngModel)]="selectedNeed.price" placeholder="Price">
+    <label for="need-quantity">Quantity: </label>
+    <input id="need-quantity" [(ngModel)]="selectedNeed.quantity" placeholder="Quantity">
+    <label for="need-type">Type: </label>
+    <input id="need-type" [(ngModel)]="selectedNeed.type" placeholder="Type">
+  </div>
+  <button (click)="toggleHideDetails()">Hide Details</button>
+</div>
