--- a/ufund-ui/src/app/home/home.component.html
+++ b/ufund-ui/src/app/home/home.component.html
@@ -5,7 +5,7 @@
 <div class="topnav">
   <a class="active" href="#home">Home</a>
   <a href="#about">About</a>
-  <a href="#contact">Contact</a>
+  <a href="#contact">Log Out</a>
   <input type="text" class="search-box" placeholder="Search...">
 </div>
 
