--- a/ufund-ui/src/app/admin/admin.component.html
+++ b/ufund-ui/src/app/admin/admin.component.html
@@ -17,10 +17,10 @@
       <input id="name" [(ngModel)]="newNeed.name" name="name" />
 
       <label for="price">Price:</label>
-      <input id="price" [(ngModel)]="newNeed.price" name="price" />
+      <input id="price" [(ngModel)]="newNeed.cost" name="price" />
 
       <label for="quantity">Quantity:</label>
-      <input id="quantity" [(ngModel)]="newNeed.quantity" name="quantity" />
+      <input id="quantity" [(ngModel)]="newNeed.requiredQuantity" name="quantity" />
 
       <label for="type">Type:</label>
       <input id="type" [(ngModel)]="newNeed.type" name="type" />
