--- a/ufund-ui/src/app/admin/admin.component.html
+++ b/ufund-ui/src/app/admin/admin.component.html
@@ -21,10 +21,12 @@
 
       <label for="quantity">Quantity:</label>
       <input id="quantity" [(ngModel)]="newNeed.quantity" name="quantity" />
+   
+      <label for="requiredquantity ">Required Quantity:</label>
+      <input id="requiredquantity" [(ngModel)]="newNeed.requiredquantity" name="requiredquantity" />
 
       <label for="type">Type:</label>
       <input id="type" [(ngModel)]="newNeed.type" name="type" />
-
       <button type="submit">Submit</button>
     </form>
   </div>
