--- a/ufund-ui/src/app/need-detail/need-detail.component.html
+++ b/ufund-ui/src/app/need-detail/need-detail.component.html
@@ -10,6 +10,8 @@
       <input id="need-cost" [(ngModel)]="selectedNeed.price" placeholder="Price">
       <label for="need-quantity">Quantity: </label>
       <input id="need-quantity" [(ngModel)]="selectedNeed.quantity" placeholder="Quantity">
+      <label for="need-requiredquantity">Quantity: </label>
+      <input id="need-requiredquantity" [(ngModel)]="selectedNeed.requiredquantity" placeholder="requiredquantity">
       <label for="need-type">Type: </label>
       <input id="need-type" [(ngModel)]="selectedNeed.type" placeholder="Type">
     </div>
