Fixed merged conflict

--- a/ufund-ui/src/app/admin/admin.component.html
+++ b/ufund-ui/src/app/admin/admin.component.html
@@ -19,11 +19,11 @@
       <label for="price">Price:</label>
       <input id="price" [(ngModel)]="newNeed.cost" name="price" />
 
-      <label for="quantity">Quantity:</label>
-      <input id="quantity" [(ngModel)]="newNeed.quantity" name="quantity" />   
+      <label for="currentQuantity">Quantity:</label>
+      <input id="currentQuantity" [(ngModel)]="newNeed.currentQuantity" name="currentQuantity" />   
 
       <label for="requiredquantity ">Required Quantity:</label>
-      <input id="requiredquantity" [(ngModel)]="newNeed.requiredquantity" name="requiredquantity" />
+      <input id="requiredquantity" [(ngModel)]="newNeed.requiredQuantity" name="requiredquantity" />
 
       <label for="type">Type:</label>
       <input id="type" [(ngModel)]="newNeed.type" name="type" />
