--- a/ufund-ui/src/app/need-detail/need-detail.component.html
+++ b/ufund-ui/src/app/need-detail/need-detail.component.html
@@ -9,11 +9,11 @@
       <input id="need-name" [(ngModel)]="selectedNeed.name" placeholder="Name">
       <label for="need-cost">Price: </label>
 
-      <input id="need-cost" [(ngModel)]="selectedNeed.price" placeholder="Price">
+      <input id="need-cost" [(ngModel)]="selectedNeed.cost" placeholder="Price">
       <label for="need-currentQuantity">Quantity: </label>
       <input id="need-currentQuantity" [(ngModel)]="selectedNeed.currentQuantity" placeholder="Current Quantity">
       <label for="need-requiredquantity">Quantity: </label>
-      <input id="need-requiredquantity" [(ngModel)]="selectedNeed.requiredquantity" placeholder="requiredquantity">
+      <input id="need-requiredquantity" [(ngModel)]="selectedNeed.requiredQuantity" placeholder="requiredquantity">
 
       <label for="need-type">Type: </label>
       <input id="need-type" [(ngModel)]="selectedNeed.type" placeholder="Type">
