--- a/ufund-ui/src/app/admin/admin.component.html
+++ b/ufund-ui/src/app/admin/admin.component.html
@@ -19,8 +19,11 @@
       <label for="price">Price:</label>
       <input id="price" [(ngModel)]="newNeed.price" name="price" />
 
-      <label for="quantity">Quantity:</label>
-      <input id="quantity" [(ngModel)]="newNeed.quantity" name="quantity" />
+      <label for="quantity">Current Quantity:</label>
+      <input id="quantity" [(ngModel)]="newNeed.currentQuantity" name="currentQuantity" />
+
+      <label for="quantity">Required Quantity:</label>
+      <input id="quantity" [(ngModel)]="newNeed.requiredQuantity" name="requiredQuantity" />
 
       <label for="type">Type:</label>
       <input id="type" [(ngModel)]="newNeed.type" name="type" />
