--- a/ufund-ui/src/app/home/home.component.html
+++ b/ufund-ui/src/app/home/home.component.html
@@ -1,37 +1,31 @@
+
 <div class="header">
   <h1>Support Morocco Earthquakes</h1>
 </div>
 
 <div class="topnav">
   <a class="active" href="#home">Home</a>
-  <a href="#about">About</a>
+  <a routerLink="/about">About</a>
+  <a routerLink="/cart">Cart</a>
   <a href="#contact">Log Out</a>
   <input type="text" class="search-box" placeholder="Search...">
 </div>
 
 <h2>Cupboard</h2>
 <div class="needs">
-  <div *ngFor="let need of needs">
-    <button [class.selected]="need === selectedNeed" type="button" (click)="onSelect(need)">
-      <span class="name">{{need.name}}</span>
-    </button>
+  <div *ngFor="let need of needs" class="need-box">
+    <!-- Display need details -->
+    <h3 class="name">{{need.name}}</h3>
+    <p>Price: {{need.price}}</p>
+    <p>Current Quantity Donated: {{need.currentQuantity}}</p>
+    <p>Required Quantity Donated: {{need.requiredQuantity}}</p>
+    <p>Type: {{need.type}}</p>
+    <!-- Add to Cart button -->
+    <button (click)="addToCart(need)">Add to Cart</button>
   </div>
 </div>
 
 
-<div *ngIf="selectedNeed">
-  <h2>{{selectedNeed.name | uppercase}} </h2>
-  <div>Price: {{selectedNeed.price}}</div>
-  <div>Quantity: {{selectedNeed.quantity}}</div>
-  <div>Type: {{selectedNeed.type}}</div>
-  <div class="input-group">
-    <!-- <label for="need-name">Need name: </label> -->
-    <!-- <input id="need-name" [(ngModel)]="selectedNeed.name" placeholder="Name"> -->
-    <!-- <label for="need-cost">Price: </label> -->
-    <!-- <input id="need-cost" [(ngModel)]="selectedNeed.price" placeholder="Price"> -->
-    <!-- <label for="need-quantity">Quantity: </label> -->
-    <!-- <input id="need-quantity" [(ngModel)]="selectedNeed.quantity" placeholder="Quantity"> -->
-  </div>
-</div>
+
 
 
