--- a/ufund-ui/src/app/need-detail/need-detail.component.html
+++ b/ufund-ui/src/app/need-detail/need-detail.component.html
@@ -1,15 +1,18 @@
 <div *ngIf="selectedNeed">
     <h2>{{selectedNeed.name | uppercase}} </h2>
     <div>Price: {{selectedNeed.price}}</div>
-    <div>Quantity: {{selectedNeed.quantity}}</div>
+    <div>Current Quantity: {{selectedNeed.currentQuantity}}</div>
+    <div>Required Quantity: {{selectedNeed.requiredQuantity}}</div>
     <div>Type: {{selectedNeed.type}}</div>
     <div class="input-group">
       <label for="need-name">Need name: </label> 
       <input id="need-name" [(ngModel)]="selectedNeed.name" placeholder="Name">
       <label for="need-cost">Price: </label>
       <input id="need-cost" [(ngModel)]="selectedNeed.price" placeholder="Price">
-      <label for="need-quantity">Quantity: </label>
-      <input id="need-quantity" [(ngModel)]="selectedNeed.quantity" placeholder="Quantity">
+      <label for="need-quantity">Current Quantity: </label>
+      <input id="need-quantity" [(ngModel)]="selectedNeed.currentQuantity" placeholder="currentQuantity">
+      <label for="need-quantity">Required Quantity: </label>
+      <input id="need-quantity" [(ngModel)]="selectedNeed.requiredQuantity" placeholder="requiredQuantity">
       <label for="need-type">Type: </label>
       <input id="need-type" [(ngModel)]="selectedNeed.type" placeholder="Type">
     </div>
