--- a/ufund-ui/src/app/shoppingcart/shoppingcart.component.html
+++ b/ufund-ui/src/app/shoppingcart/shoppingcart.component.html
@@ -1,12 +1,28 @@
-<div *ngIf="user" style="height: 50vh; overflow-y: scroll;">
-    <h2>{{user.name}}'s Cart:</h2>
-    <div *ngFor="let entry of products | keyvalue">
-        <label>{{entry.key}}:</label>
-        <div *ngFor="let item of entry.value; index as i">
-            <label *ngIf="i%2 == 0">{{item}} oz package</label>
-            <label *ngIf="i%2 == 0">: ${{entry.value[i+1]}}</label>
-            <button *ngIf="i%2 == 0" type="button" class="delete-button" (click)="removeItemFromCart(i)">x</button>
-          </div>
+
+<div class="cart-container">
+  <h2>Shopping Cart</h2>
+
+  <ng-container *ngIf="cartItems?.length; else noItems">
+    <div *ngFor="let item of cartItems" class="cart-item">
+      <div class="item-details">
+        <h3>{{ item.name }}</h3>
+        <p>Price: {{ item.price }}</p>
+        <p>Current Quantity: {{ item.currentQuantity }}</p>
+        <p>Required Quantity: {{ item.requiredQuantity }}</p>
+        <button (click)="removeItemFromCart(item)">Remove from Cart</button>
+      </div>
     </div>
+  </ng-container>
+
+  <ng-template #noItems>
+    <div class="empty-cart-message">No items in the cart</div>
+  </ng-template>
+
+  <div class="cart-actions">
+    <button class="checkout-button" (click)="checkout()">Checkout</button>
+    <button class="home-button" (click)="goToHome()">Go to Home</button>
+  </div>
 </div>
 
+  
+  
