--- a/ufund-ui/src/app/admin/admin.component.html
+++ b/ufund-ui/src/app/admin/admin.component.html
@@ -31,3 +31,13 @@
     </form>
   </div>
 </div>
+
+!-- //Search button for needs -->
+<h2>Top Needs</h2>
+<div class="needs-menu">
+  <a *ngFor="let need of needs"
+      routerLink="/detail/{{need.name}}">
+      {{need.name}}
+  </a>
+</div>
+<app-need-search></app-need-search>
