--- a/ufund-ui/src/app/admin/admin.component.html
+++ b/ufund-ui/src/app/admin/admin.component.html
@@ -17,7 +17,7 @@
       <input id="name" [(ngModel)]="newNeed.name" name="name" />
 
       <label for="price">Price:</label>
-      <input id="price" [(ngModel)]="newNeed.cost" name="price" />
+      <input id="price" [(ngModel)]="newNeed.price" name="price" />
 
       <label for="quantity">Current Quantity:</label>
       <input id="quantity" [(ngModel)]="newNeed.currentQuantity" name="currentQuantity" />
