fixed a big with cost & price

--- a/ufund-ui/src/app/admin/admin.component.html
+++ b/ufund-ui/src/app/admin/admin.component.html
@@ -16,8 +16,8 @@
       <label for="name">Need name:</label>
       <input id="name" [(ngModel)]="newNeed.name" name="name" />
 
-      <label for="price">Price:</label>
-      <input id="price" [(ngModel)]="newNeed.price" name="price" />
+      <label for="cost">cost:</label>
+      <input id="cost" [(ngModel)]="newNeed.cost" name="cost" />
 
       <label for="quantity">Current Quantity:</label>
       <input id="quantity" [(ngModel)]="newNeed.currentQuantity" name="currentQuantity" />
