--- a/ufund-ui/src/app/home/home.component.html
+++ b/ufund-ui/src/app/home/home.component.html
@@ -16,7 +16,7 @@
   <div *ngFor="let need of needs" class="need-box">
     <!-- Display need details -->
     <h3 class="name">{{need.name}}</h3>
-    <p>Price: {{need.price}}</p>
+    <p>Cost: {{need.cost}}</p>
     <p>Current Quantity Donated: {{need.currentQuantity}}</p>
     <p>Required Quantity Donated: {{need.requiredQuantity}}</p>
     <p>Type: {{need.type}}</p>
