--- a/ufund-ui/src/app/shoppingcart/shoppingcart.component.html
+++ b/ufund-ui/src/app/shoppingcart/shoppingcart.component.html
@@ -6,7 +6,7 @@
     <div *ngFor="let item of cartItems" class="cart-item">
       <div class="item-details">
         <h3>{{ item.name }}</h3>
-        <p>Price: {{ item.price }}</p>
+        <p>Cost: {{ item.cost }}</p>
         <p>Current Quantity: {{ item.currentQuantity }}</p>
         <p>Required Quantity: {{ item.requiredQuantity }}</p>
         <button (click)="removeItemFromCart(item)">Remove from Cart</button>
