Search completed. Needs css changes.

--- a/ufund-ui/src/app/admin/admin.component.html
+++ b/ufund-ui/src/app/admin/admin.component.html
@@ -1,16 +1,19 @@
 <app-need-search></app-need-search>
 
-<h2>Cupboard</h2>
+<!-- <h2>Cupboard</h2>
 
-<div class="needs">
-  <div *ngFor="let need of needs">
-    <a routerLink="/detail/{{need.name}}">
-      <span class="need">{{need.name}}</span>
-    </a>
-  </div>
-</div>
-<app-need-detail [selectedNeed]="selectedNeed"></app-need-detail>
 
+  <div class="needs">
+    <div *ngFor="let need of needs">
+      <a routerLink="/detail/{{need.name}}">
+        <span class="need">{{need.name}}</span>
+        <p>Price: {{need.cost}}</p>
+        <p>Current Quantity Donated: {{need.currentQuantity}}</p>
+        <p>Required Quantity Donated: {{need.requiredQuantity}}</p>
+        <p>Type: {{need.type}}</p>
+      </a>
+    </div>
+  </div> -->
 
 <div>
   <div>
