Did design doc, oop principles

--- a/ufund-ui/src/app/admin/admin.component.html
+++ b/ufund-ui/src/app/admin/admin.component.html
@@ -7,7 +7,7 @@
       <label for="name">Need name:</label>
       <input id="name" [(ngModel)]="newNeed.name" name="name" />
 
-      <label for="cost">cost:</label>
+      <label for="cost">cost: $</label>
       <input id="cost" [(ngModel)]="newNeed.cost" name="cost" />
 
       <label for="quantity">Current Quantity:</label>
