--- a/ufund-ui/src/app/need-search/need-search.component.html
+++ b/ufund-ui/src/app/need-search/need-search.component.html
@@ -8,7 +8,7 @@
           <span class="need">{{need.name}}</span>
         </a>
         <p>Name: {{need.name}}</p>
-        <p>Price: {{need.cost}}</p>
+        <p>Price: ${{need.cost}}</p>
         <p>Current Quantity Donated: {{need.currentQuantity}}</p>
         <p>Required Quantity Donated: {{need.requiredQuantity}}</p>
         <p>Type: {{need.type}}</p>
