--- a/ufund-ui/src/app/need-detail/need-detail.component.html
+++ b/ufund-ui/src/app/need-detail/need-detail.component.html
@@ -1,14 +1,14 @@
 <div *ngIf="selectedNeed">
     <h2>{{selectedNeed.name | uppercase}} </h2>
 
-    <div>Cost: {{selectedNeed.cost}}</div>
+    <div>Cost: ${{selectedNeed.cost}}</div>
     <div>Current Quantity: {{selectedNeed.currentQuantity}}</div>
     <div>Required Quantity: {{selectedNeed.requiredQuantity}}</div>
     <div>Type: {{selectedNeed.type}}</div>
     <div class="input-group">
       <label for="need-name">Need name: </label> 
       <input id="need-name" [(ngModel)]="selectedNeed.name" placeholder="Name">
-      <label for="need-cost">Cost: </label>
+      <label for="need-cost">Cost: $</label>
 
       <input id="need-cost" [(ngModel)]="selectedNeed.cost" placeholder="Cost">
       <label for="need-quantity">Current Quantity: </label>
