--- a/ufund-ui/src/app/need-detail/need-detail.component.html
+++ b/ufund-ui/src/app/need-detail/need-detail.component.html
@@ -21,4 +21,6 @@
     </div>
     <button type="button" (click)="goBack()">Return to Cupboard</button>
     <button type="button" (click)="save()">save</button>
+    <button type="button" (click)="delete()">delete</button>
+
   </div>
