--- a/ufund-ui/src/app/home/home.component.css
+++ b/ufund-ui/src/app/home/home.component.css
@@ -124,3 +124,18 @@ body {
 .arrow {
   margin-right: 10px;
 }
+#search-component {
+  margin-top: 20px; /* Adjust the margin as needed */
+}
+
+#search-box {
+  width: 200px; /* Adjust the width as needed */
+  padding: 8px;
+  border: 1px solid #ccc; /* Border color */
+  border-radius: 4px; /* Border radius for rounded corners */
+  outline: none; /* Remove the default focus outline */
+}
+
+#search-box:focus {
+  border-color: #007bff; /* Change border color on focus */
+}
